--- a/src/app/core/admin-layout/admin-layout.component.html
+++ b/src/app/core/admin-layout/admin-layout.component.html
@@ -42,10 +42,12 @@
 
 
 <div class="configuration hidden-sm-down" [ngClass]="{'active': options.settings}">
+    <!-- 
     <div class="configuration-cog" (click)="options.settings = !options.settings">
         <i class="icon icon-basic-mixer2"></i>
-    </div>
-    <div class="card">
+    </div> -->
+
+    <!--     <div class="card">
         <div class="card-header">
             Template Options
         </div>
@@ -111,4 +113,5 @@
             </div>
         </div>
     </div>
+-->
 </div>
