--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,7 +2,7 @@
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href="javascript:;">
-                <span>Copyright &copy; 2017</span> <span class="ff-headers text-uppercase">Decima</span>. All rights reserved
+                <span>Copyright &copy; {{anio}}  </span> <span class="ff-headers text-uppercase">Decima</span>. All rights reserved
             </a>
         </li>
     </ul>
