--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -13,7 +13,7 @@
     <ul class="navbar-nav">
         <li class="nav-item" ngbDropdown placement="bottom-right">
             <a href="javascript:;" class="nav-link" ngbDropdownToggle>
-                <img src="assets/images/avatar.jpg" class="navbar-avatar rounded-circle" alt="user" title="user">
+                <img src="assets/images/avatar.jpg" class="navbar-avatar rounded-circle" alt="user" title="user"> {{currentUser.user.name}}
             </a>
             <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right">
                 <a class="dropdown-item" href="javascript:;">
@@ -29,7 +29,7 @@
                     <span>Notifications</span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="javascript:;">
+                <a class="dropdown-item" (click)=" logout()">
                     <i class="icon icon-arrows-switch-vertical mr-3"></i>
                     <span>Signout</span>
                 </a>
