--- a/src/app/authentication/signin/signin.component.html
+++ b/src/app/authentication/signin/signin.component.html
@@ -34,7 +34,7 @@
             </div>
             <div class="block"></div>
             <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Login</button>
-            <a class="btn btn-outline-primary btn-link" [routerLink]="['/authentication/signup']">Create an account!</a>
+            <a class="btn btn-outline-primary btn-link" [routerLink]="['/signup']">Create an account!</a>
 
             <div class="alert alert-danger" role="alert" *ngIf="message" ng-show="errorMsg">
 
