--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -13,14 +13,14 @@
     <ul class="navbar-nav">
         <li class="nav-item" ngbDropdown placement="bottom-right">
             <a href="javascript:;" class="nav-link" ngbDropdownToggle>
-                <img src="assets/images/avatar.jpg" class="navbar-avatar rounded-circle" alt="user" title="user"> {{currentUser.user.name}}
+                <img src="assets/images/users.png" class="navbar-avatar rounded-circle" alt="user" title="user"> {{ currentUser.user.name }}
             </a>
             <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right">
                 <a class="dropdown-item" href="javascript:;">
                     <i class="icon icon-basic-settings mr-3"></i>
                     <span>Settings</span>
                 </a>
-                <a class="dropdown-item" href="javascript:;">
+                <a class="dropdown-item" [routerLink]="['/user']">
                     <i class="icon icon-basic-postcard mr-3"></i>
                     <span>Profile</span>
                 </a>
